# hackathon

./: .gitignore  Makefile  README.md  inference.py  main.py  matcher.py  model.py  prepare.py  pyproject.toml  sample.py  test.py  variant.py
dataset/: Advance - Sao chép.xlsx
